[tool.poetry]
name = "github-actions"
version = "0.1.0"
description = ""
authors = ["Chyngyz <konuratov.chika@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2"
djangorestframework = "^3.15.2"
pillow = "^10.4.0"
drf-spectacular = "^0.27.2"
django-unfold = "^0.39.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
